--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/teste2
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.name=SpringBootMysqlDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
