--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/teste2
+spring.datasource.url=jdbc:mysql://localhost:3306/teste2?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Abc123456
 spring.datasource.name=SpringBootMysqlDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
