Separando tabela endereço e implementado relacionamentos muitos para um

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.password=Abc123456
 spring.datasource.name=SpringBootMysqlDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show_sql=true
+spring.jpa.show_sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
